Tooltip added. HTML refactoring.

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.7/semantic.min.css">
   <link rel="stylesheet" href="assets/css/weather-icons.css">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+  <link rel="stylesheet" href="assets/css/chartist-plugin-tooltip.css">
   <link rel="stylesheet" href="assets/css/custom.css">
   <!-- <script type="text/javascript" src="../angular.min.js"></script> -->
   <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
@@ -16,6 +17,7 @@
   <script src="assets/javascripts/chart/chart.directive.js"></script>
   <script src="assets/javascripts/card/card.component.js"></script>
   <script src="assets/javascripts/home/home.controller.js"></script>
+  <script src="assets/javascripts/vendor/chartist-plugin-tooltip-min.js"></script>
 
 
 </head>
