--- a/app/assets/javascripts/home/home.html
+++ b/app/assets/javascripts/home/home.html
@@ -1,27 +1,12 @@
+<div class="ui center aligned padded container">
+  <h1 id="title">Current weather in {{vm.currentWeather.name}}</h1>
+</div>
 
-
-  <div class="ui middle aligned two column centered padded grid">
-    <h1>Current weather in {{vm.currentWeather.name}}</h1>
+<div class="ui one column grid container center aligned">
+  <div class="row">
+    <card class="ui centered raised card" data=vm.currentWeather></card>
   </div>
-  <card class="ui middle aligned two column centered padded grid" data=vm.currentWeather></card>
-  <chart class="ui middle aligned two column centered padded grid" data=vm.chartData></chart>
-
-<!-- + Show the "current" conditions for New York:
-  + Location (ie. New York, NY, USA)
-  + Current weather description (ie. sunny)
-  + Current temperature
-  + Today's high temperature
-  + Today's low temperature
-+ Allow the user to toggle more data in the current conditions area:
-    + Wind Speed
-    + Humidity
-    + Pressure
-    + Sunrise/Sunset Time
-+ Show the 7 Day forecast as a multi-line chart (use any charting library you would like but it should be incorporated as an Angular Directive)
-  + Y axis should show the High and Low temperature as separate lines
-  + X axis should show 7 days (starting with the "current" day)
-  + The chart should have a tool tip that when activated shows:
-    + Day of the week
-    + High temperature
-    + Low temperature
-    + Weather description (ie. Breezy) -->
+  <div class="row">
+    <chart class="ui centered raised fluid card" data=vm.chartData></chart>
+  </div>
+</div>
