Scripts now using ang 1.5.8 min

--- a/app/index.html
+++ b/app/index.html
@@ -7,17 +7,19 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
   <link rel="stylesheet" href="assets/css/chartist-plugin-tooltip.css">
   <link rel="stylesheet" href="assets/css/custom.css">
-  <!-- <script type="text/javascript" src="../angular.min.js"></script> -->
-  <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
-  <script src="https://unpkg.com/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="assets/javascripts/app.js"></script>
-  <script src="assets/javascripts/home/data.service.js"></script>
-  <script src="assets/javascripts/chart/chart.data.service.js"></script>
-  <script src="assets/javascripts/chart/chart.directive.js"></script>
-  <script src="assets/javascripts/card/card.component.js"></script>
-  <script src="assets/javascripts/home/home.controller.js"></script>
-  <script src="assets/javascripts/vendor/chartist-plugin-tooltip-min.js"></script>
+  <!-- vendor -->
+  <script type="text/javascript" src="assets/javascripts/vendor/angular.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/angular-ui-router/release/angular-ui-router.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+  <script type="text/javascript" src="assets/javascripts/vendor/chartist-plugin-tooltip-min.js"></script>
+  <!-- dev -->
+  <script type="text/javascript" src="assets/javascripts/app.js"></script>
+  <script type="text/javascript" src="assets/javascripts/home/data.service.js"></script>
+  <script type="text/javascript" src="assets/javascripts/chart/chart.data.service.js"></script>
+  <script type="text/javascript" src="assets/javascripts/chart/chart.directive.js"></script>
+  <script type="text/javascript" src="assets/javascripts/card/card.component.js"></script>
+  <script type="text/javascript" src="assets/javascripts/home/home.controller.js"></script>
+
 
 
 </head>
